--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item disabled dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
             </a>
