--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item disabled dropdown">
+          <!---<li class="nav-item disabled dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
             </a>
@@ -37,7 +37,7 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
-          <!--<li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>-->
         </ul>
