--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
-          <li class="nav-item dropdown">
+          <!--<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
             </a>
@@ -42,7 +42,7 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
-          <!--<li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>-->
         </ul>
