--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </h1>
           <p class="mb-8 leading-relaxed">Teaching is my passion and teaching is something I enjoy.First a fall to begin with I must say that I just love kids and my rapport with them has always been good and this is a platform which will bring me closer to them.</p>
           <div class="flex justify-center">
-            <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+            <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" href="about.html">About</button>
           </div>
         </div>
       </div>
