--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <img class="object-cover w-full h-56" src="https://images.unsplash.com/photo-1542156822-6924d1a71ace?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="avatar">
     
     <div class="py-5 text-center">
-        <a href="#" class="block text-2xl font-bold text-gray-800 dark:text-white">Srinath Sarkar</a>
+        <a href="https://www.facebook.com/srinathsarkar.ulysses" class="block text-2xl font-bold text-gray-800 dark:text-white">Srinath Sarkar</a>
         <span class="text-sm text-gray-700 dark:text-gray-200">Teacher</span>
     </div>
   </div>
